Fixes header text overlap

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -182,7 +182,7 @@
     color: #EE3B24;
 }
 /* ========================================== Affiliates Area ========================================== */
-.img-fluid {
+.img_logo {
     min-width: 63px;
     max-height: 87px;
     padding: 0.5em;
